small adjustments to fix shifts

--- a/styles/styles-article.css
+++ b/styles/styles-article.css
@@ -12,14 +12,17 @@
     contain: layout;
     background-color: #000;
     box-shadow: 0 .25em .5em rgba(0, 0, 0, .4), inset 0 0 .625em rgba(255, 255, 255, .1);
-    min-height: 100%;
+    min-height: 100vh;
     contain: layout;
   }
 
   body:not(.fonts-loaded) #projects>* {
-    visibility: hidden;
-    position: absolute;
-    width: 100%;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+  }
+
+  body.fonts-loaded #projects>* {
+    opacity: 1;
   }
 
   #the-design {
@@ -520,7 +523,7 @@
     }
 
     .thumbnail-aspect {
-      aspect-ratio: ;
+      aspect-ratio: 275 / 238;
     }
 
     #grade-table-img1,
